--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
-name=Equisense TMP007 Library
+name=IoThings TMP007 Library
 version=1.0.0
-author=Adrien Chapelet
-maintainer=Equisense <adrien@equisense.fr>
+author=Adrien Chapelet for IoThings
+maintainer=Adrien Chapelet <adrien3d@gmail.com>
 sentence=Arduino library for the MLX90614 sensors in the EQS Prototype
 paragraph=Arduino library for the MLX90614 sensors in the EQS Prototype
 category=Sensors
